fix: update deprecated Thread.getId() to threadId() and improve build flags
- Replace Thread.currentThread().getId() with threadId() as per Java 19 deprecation
- Add -Xlint:deprecation flag to javac to catch deprecated API usage
- Remove MotiveWave dependency in performance calculations